<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PersonPath</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_t">用户名</string>
    <string name="remeber_name">记住我</string>
    <string name="userpasswd_t">密码</string>
    <string name="login_t">登陆</string>
    <string name="input_name_hint">请输入用户名</string>
    <string name="input_pwd_hint">请输入密码</string>
</resources>